--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit
-google-generativeai
-python-dotenv
-requests
-streamlit-lottie 
+streamlit>=1.22.0
+pillow>=10.0.0
+google-generativeai>=0.3.0
+python-dotenv>=1.0.0
